--- a/example/css/choice/_option.scss
+++ b/example/css/choice/_option.scss
@@ -1,6 +1,7 @@
 .react-choice-option {
   cursor: pointer;
-  padding: 5px 10px;
+  padding: 6px 10px;
+  font-size: 0.875rem;
 
   &--selected {
     background: #eee;
