--- a/example/css/choice/_single.scss
+++ b/example/css/choice/_single.scss
@@ -1,29 +1,5 @@
-.react-choice-input {
-  margin-bottom: 0;
-  -webkit-appearance: none;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-
-  background-color: white;
-  font-family: inherit;
-  border: 1px solid #ccc;
-
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-
-  color: rgba(0, 0, 0, 0.75);
-  display: block;
-  font-size: .875rem;
-  margin: 0;
-  padding: .5rem;
+.react-choice-single {
   height: 2.3125rem;
-  width: 100%;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: -webkit-box-shadow .45s, border-color .45s ease-in-out;
-  -moz-transition: -moz-box-shadow .45s, border-color .45s ease-in-out;
-  transition: box-shadow .45s, border-color .45s ease-in-out;
 
   &--not-in-focus {
     cursor: pointer;
@@ -49,5 +25,32 @@
     -moz-box-shadow: 0 0 5px #999;
     box-shadow: 0 0 5px #999;
     border-color: #999;
+  }
+
+  &__input {
+    cursor: inherit;
+
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    background-color: transparent;
+
+    background-color: transparent;
+    font-family: inherit;
+    border: none;
+    box-shadow: none;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+
+    font-size: .875rem;
+
+    &:focus {
+      background: transparent;
+      border: none;
+      box-shadow: none;
+      outline: none;
+    }
   }
 }
