--- a/example/css/choice/_multiple.scss
+++ b/example/css/choice/_multiple.scss
@@ -1,27 +1,10 @@
 .react-choice-multiple {
   cursor: text;
+  padding-bottom: 3px;
 
   &__input {
-    margin-bottom: 0;
-    -webkit-appearance: none;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-
-    background-color: transparent;
-    font-family: inherit;
-    border: none;
-    box-shadow: none;
-    padding: 0;
-    margin: 0;
-    height: 100%;
-
-    font-size: .875rem;
-
-    &:focus {
-      background: transparent;
-      border: none;
-      box-shadow: none;
-      outline: none;
-    }
+    float: left;
+    margin-top: 5px;
+    margin-bottom: 10px;
   }
 }
