--- a/example/css/choice/index.scss
+++ b/example/css/choice/index.scss
@@ -1,12 +1,13 @@
 @import "wrapper";
+@import "input";
+@import "single";
+@import "multiple";
 @import "icon";
 @import "options";
 @import "option";
 @import "text-highlight";
-@import "single";
-@import "multiple";
 @import "value";
 
 .react-choice {
-    position: relative;
+  position: relative;
 }
