Move between values

--- a/example/css/choice/_multiple.scss
+++ b/example/css/choice/_multiple.scss
@@ -2,6 +2,10 @@
   cursor: text;
   padding-bottom: 3px;
 
+  &:focus {
+    outline: none;
+  }
+
   &__input {
     float: left;
     margin-top: 5px;
