Format examples correctly and added multiple example code snippet

--- a/example/css/index.scss
+++ b/example/css/index.scss
@@ -9,17 +9,34 @@
 
 // Base
 body {
-    font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
-    font-size: 16px;
-    width: 540px;
-    margin: 0 auto;
+  font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  width: 940px;
+  margin: 0 auto;
 }
 
 h1,
 h2,
 h3,
 h4 {
-    font-weight: lighter;
-    letter-spacing: 1.2px;
-    text-rendering: optimizeLegibility;
+  font-weight: lighter;
+  letter-spacing: 1.2px;
+  text-rendering: optimizeLegibility;
+}
+
+.example-single,
+.example-multiple {
+  width: 450px;
+  float: left;
+}
+
+.example-single {
+  padding-right: 9px;
+  border-right: 1px solid #ccc;
+  margin-right: 10px;
+  padding-bottom: 20px;
+
+  .code-snippet {
+    margin-top: 23px;
+  }
 }
