--- a/example/css/choice/_value.scss
+++ b/example/css/choice/_value.scss
@@ -9,4 +9,13 @@
   &--is-selected {
     background: #eee;
   }
+
+  &__delete {
+    padding-left: 5px;
+    font-weight: bold;
+  }
+
+  &__children {
+    display: inline-block;
+  }
 }
