Added custom renderer example with pokemon data

--- a/example/css/index.scss
+++ b/example/css/index.scss
@@ -6,6 +6,8 @@
 @import "components/code-snippet";
 @import "components/features";
 @import "components/ofs-credit";
+@import "components/tutorial";
+@import "components/pokemon";
 
 // Base
 body {
