Added explanation on how to create a custom renderer

--- a/example/css/components/_tutorial.scss
+++ b/example/css/components/_tutorial.scss
@@ -1,15 +1,5 @@
 .tutorial {
   &__example {
-    width: 450px;
-    float: left;
-
-    padding-right: 9px;
-    border-right: 1px solid #ccc;
-    margin-right: 10px;
-  }
-
-  &__guide {
-    width: 450px;
-    float: left;
+    margin-bottom: 20px;
   }
 }
