--- a/example/css/choice/index.css
+++ b/example/css/choice/index.css
@@ -102,21 +102,19 @@
   position: absolute;
   z-index: 2;
   width: 100%;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
-  max-height: 305px;
-  overflow: auto; }
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15); }
   .react-choice-options__list {
     background: #fff;
     border: 1px solid #D0D0D0;
     border-top: none;
-    list-style-type: none;
     margin: 0;
     padding: 0; }
 
 .react-choice-option {
   cursor: pointer;
   padding: 6px 10px;
-  font-size: 0.875rem; }
+  font-size: 0.875rem;
+  height: 18px; }
   .react-choice-option--selected {
     background: #eee; }
 
