--- a/example/css/choice/index.css
+++ b/example/css/choice/index.css
@@ -2,25 +2,20 @@
   overflow: hidden;
   font-family: inherit;
   border: 1px solid #ccc;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   color: rgba(0, 0, 0, 0.75);
   display: block;
-  font-size: 0.875rem;
+  font-size: .875rem;
   margin: 0;
-  padding: 0.5rem;
+  padding: .5rem;
   width: 100%;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-transition: -webkit-box-shadow 0.45s, border-color 0.45s ease-in-out;
-  -moz-transition: -moz-box-shadow 0.45s, border-color 0.45s ease-in-out;
-  transition: box-shadow 0.45s, border-color 0.45s ease-in-out; }
+  -webkit-transition: box-shadow .45s, border-color .45s ease-in-out;
+          transition: box-shadow .45s, border-color .45s ease-in-out; }
 
 .react-choice-input {
   cursor: inherit;
   -webkit-appearance: none;
-  -webkit-border-radius: 0;
   border-radius: 0;
   background-color: transparent;
   background-color: transparent;
@@ -29,8 +24,7 @@
   box-shadow: none;
   padding: 0;
   margin: 0;
-  height: 100%;
-  font-size: 0.875rem; }
+  font-size: .875rem; }
   .react-choice-input:focus {
     background: transparent;
     border: none;
@@ -42,21 +36,16 @@
   .react-choice-single--not-in-focus {
     cursor: pointer;
     background-color: #f9f9f9;
-    background-image: -moz-linear-gradient(top, #fefefe, #f2f2f2);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fefefe), to(#f2f2f2));
     background-image: -webkit-linear-gradient(top, #fefefe, #f2f2f2);
-    background-image: -o-linear-gradient(top, #fefefe, #f2f2f2);
     background-image: linear-gradient(to bottom, #fefefe, #f2f2f2);
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffefefe', endColorstr='#fff2f2f2', GradientType=0);
-    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 1px 0 rgba(255, 255, 255, 0.8);
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 1px 0 rgba(255, 255, 255, 0.8); }
   .react-choice-single--in-focus {
     background: #fafafa;
     border-color: #999;
     outline: 0;
-    -webkit-box-shadow: 0 0 5px #999;
-    -moz-box-shadow: 0 0 5px #999;
     box-shadow: 0 0 5px #999;
     border-color: #999; }
   .react-choice-single__input {
