--- a/example/css/choice/index.css
+++ b/example/css/choice/index.css
@@ -116,14 +116,14 @@
   float: left;
   border: 1px solid #eee;
   margin-right: 5px;
-  cursor: pointer;
   padding: 4px;
   margin-bottom: 5px; }
   .react-choice-value--is-selected {
     background: #eee; }
   .react-choice-value__delete {
     padding-left: 5px;
-    font-weight: bold; }
+    font-weight: bold;
+    cursor: pointer; }
   .react-choice-value__children {
     display: inline-block; }
 
